--- a/popup.html
+++ b/popup.html
@@ -1,43 +1,96 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Set Salary</title>
+    <title>TimeSwap Setup</title>
     <style>
       body {
         font-family: sans-serif;
-        min-width: 250px; /* Prevent popup from being too small */
+        min-width: 250px;
         padding: 10px;
+        margin: 0;
       }
-      label,
-      input,
-      button {
-        display: block;
+      h2 {
+        margin-top: 0;
+      }
+      .radio-group {
         margin-bottom: 10px;
-        width: 95%;
       }
-      button {
-        cursor: pointer;
+      .radio-group label {
+        margin-right: 10px;
+      }
+      label {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 4px;
+      }
+      input[type="number"] {
+        display: block;
+        margin-bottom: 12px;
+        width: 100%;
+        box-sizing: border-box;
+        padding: 6px;
+      }
+      #computedHourly {
+        font-weight: bold;
       }
       #status {
         font-size: 0.9em;
-        color: green;
-        min-height: 1.2em; /* Reserve space for status message */
+        min-height: 1.2em;
+        margin-top: 4px;
+      }
+      button {
+        width: 100%;
+        padding: 8px;
+        cursor: pointer;
+        font-size: 1em;
+        background-color: #007aff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+      }
+      button:hover {
+        background-color: #005bb5;
+      }
+      .container {
+        margin-bottom: 15px;
+      }
+      #hourlyRateContainer, #salaryContainer {
+        margin-bottom: 12px;
       }
     </style>
   </head>
   <body>
-    <h2>Hourly Salary</h2>
-    <label for="salary">Enter your hourly rate:</label>
-    <input
-      type="number"
-      id="salaryInput"
-      placeholder="e.g., 25.50"
-      step="0.01"
-      min="0"
-    />
-    <button id="saveButton">Save Salary</button>
+    <h2>Set Your Pay Rate</h2>
+    <div class="radio-group">
+      <label><input type="radio" name="payType" value="hourly" checked> Hourly Rate</label>
+      <label><input type="radio" name="payType" value="salary"> Annual Salary</label>
+    </div>
+    <div id="hourlyRateContainer">
+      <label for="hourlyRateInput">Enter your hourly rate:</label>
+      <input
+        type="number"
+        id="hourlyRateInput"
+        placeholder="e.g. 25.50"
+        step="0.01"
+        min="0"
+      />
+    </div>
+    <div id="salaryContainer" style="display: none;">
+      <label for="salaryInput">Enter your annual salary:</label>
+      <input
+        type="number"
+        id="salaryInput"
+        placeholder="e.g. 50000"
+        step="0.01"
+        min="0"
+      />
+    </div>
+    <div class="container">
+      <label>Computed Hourly Rate:</label>
+      <span id="computedHourly">$0.00</span>
+    </div>
+    <button id="saveButton">Save</button>
     <div id="status"></div>
-
     <script src="popup.js"></script>
   </body>
 </html>
